# google-cloud-rs

google-cloud/: Cargo.toml  build.rs
google-cloud/src/: error.rs  lib.rs
google-cloud/src/authorize/: mod.rs
google-cloud/src/storage/: bucket.rs  client.rs  object.rs
google-cloud/src/storage/api/: object.rs
